fix: fix layout for pets page on tablet

--- a/shelter/assets/scss/components/_pagination.scss
+++ b/shelter/assets/scss/components/_pagination.scss
@@ -1,4 +1,5 @@
 .pagination {
   display: flex;
   gap: 20px;
+  justify-content: center;
 }
