--- a/shelter/assets/scss/components/_pet-card.scss
+++ b/shelter/assets/scss/components/_pet-card.scss
@@ -1,7 +1,7 @@
 .pet-card {
   display: flex;
   flex-direction: column;
-  width: 270px;
+  width: 100%;
   overflow: hidden;
   text-align: center;
   background-color: var(--color-light-s);
