--- a/shelter/assets/scss/sections/_pets.scss
+++ b/shelter/assets/scss/sections/_pets.scss
@@ -1,20 +1,36 @@
+@use "assets/scss/abstracts/scss-variables" as *;
+
 .pets {
-  &__content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  padding-top: 80px;
+  padding-bottom: 100px;
+  background-color: var(--color-light-l);
+
+  @media (max-width: $breakpoint-desktop) {
+    padding-bottom: 76px;
   }
 
   &__title {
+    margin: 0 auto;
     text-align: center;
   }
 
   &__cards-page {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     gap: 30px 40px;
     justify-content: center;
     margin-top: 60px;
     margin-bottom: 60px;
+
+    @media (max-width: $breakpoint-desktop) {
+      grid-template-columns: repeat(2, auto);
+      margin-top: 30px;
+      margin-bottom: 40px;
+
+      *:nth-child(7),
+      *:nth-child(8) {
+        display: none;
+      }
+    }
   }
 }
